--- a/Fitness Company Financial Analysis/ReadME
+++ b/Fitness Company Financial Analysis/ReadME
@@ -70,4 +70,4 @@ KEY METRICS TO EVALUATE:
 - How is our gross profit distributed across our business lines? How about net profit?
 - Which business line accounts for most of our net profit?
 - Which business line accounts for most of our expenses?
-![Fitness Company Financial Analysis Dashboard](https://github.com/user-attachments/assets/784cd561-98f3-484f-b8be-f13e85bcb293)
+![Fitness Company Financial Analysis Dashboard](https://github.com/user-attachments/assets/784cd561-98f3-484f-b8be-f13e85bcb293.jpg)
