--- a/Fitness Company Financial Analysis/ReadME
+++ b/Fitness Company Financial Analysis/ReadME
@@ -71,4 +71,4 @@ KEY METRICS TO EVALUATE:
 - Which business line accounts for most of our net profit?
 - Which business line accounts for most of our expenses?
 
-[Fitness Company Financial Analysis Dashboard.pdf](https://github.com/user-attachments/files/16914038/Fitness.Company.Financial.Analysis.Dashboard.pdf)
+Fitness Company Financial Analysis/Fitness Company Financial Analysis Dashboard.pdf
