--- a/History of Video Games SQL & Tableau Analysis/ReadME
+++ b/History of Video Games SQL & Tableau Analysis/ReadME
@@ -1,2 +1,2 @@
 SQL and Tableau Analysis on the History of Video Games
-(https://github.com/user-attachments/files/16914132/Analysis.on.History.of.Video.Games.pdf)
+[Analysis on History of Video Games.pdf](https://github.com/user-attachments/files/16914143/Analysis.on.History.of.Video.Games.pdf)
