--- a/History of Video Games SQL & Tableau Analysis/ReadME
+++ b/History of Video Games SQL & Tableau Analysis/ReadME
@@ -1,2 +1,2 @@
-SQL and Tableau Analysis on the History of Video Games
-[Analysis on History of Video Games.pdf](https://github.com/user-attachments/files/16914143/Analysis.on.History.of.Video.Games.pdf)
+SQL and Tableau Analysis on the History of Video Games LINK TO ARTICLE AND SQL ANALYSIS: https://medium.com/@joebeadles1/analysis-on-history-of-video-games-sql-and-interactive-tableau-dashboard-6156064fc340
+
