--- a/Retail Transaction Analysis/ReadME
+++ b/Retail Transaction Analysis/ReadME
@@ -1,4 +1,4 @@
-Online Retail Analysis 2023-2024:
+Retail Transaction Analysis 2023-2024:
 - Data was taken from Kaggle (https://www.kaggle.com/datasets/bhavikjikadara/retail-transactional-dataset)
 
 Insights: 
