--- a/SQL Data Cleaning/ReadME
+++ b/SQL Data Cleaning/ReadME
@@ -1,4 +1,4 @@
-# DATA CLEANING PROJECT: Utilizing a Nashville Housing Dataset
+DATA CLEANING PROJECT: Utilizing a Nashville Housing Dataset
 
 STEPS:
 1. Standardizing Date Column
